# Monocle2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_sources.cmake  LICENSE  README.md  config.json  config.yaml
CMake/: CMakeLists_sources.cmake  FindAssimp.cmake  FindYAMLCPP.cmake  MonocleFunctions.cmake
Sandbox/: CMakeLists.txt
Sandbox/assets/Locomotive/: TREN.mtl
Sandbox/assets/objects/backpack/: backpack.mtl  new 5.txt
Sandbox/assets/padoru/: padoru.mtl
Sandbox/source/: Advanced1.cpp  AdvancedLighting.cpp  BasicQuad.cpp  BasicQuad.h  Basics.cpp  BlinnPhong.cpp  BlinnPhong.h  CubeWorld.cpp  CubeWorld.h  DepthRenderPass.cpp  DepthRenderPass.h  DirectionalShadowDepthPass.cpp  DirectionalShadowDepthPass.h  ImGUI.cpp  ImGUI.h  MutliViewportCubeWorld.cpp  MutliViewportCubeWorld.h  OmnidirectionalShadowDepthPass.cpp  OmnidirectionalShadowDepthPass.h  PBR.cpp  Phong.cpp  Phong.h  TestApplication.cpp  TestApplication.h  TestVkApplication.cpp  TestVkApplication.h  main.cpp
UnitTests/: CMakeLists.txt
UnitTests/source/: TestContainers.cpp  TestGraphicsBuddyAllocator.cpp  TestInput.cpp  TestLog.cpp  TestMath.cpp  TestStopwatch.cpp  Testmain.cpp
_scripts/: generate_cmake_sources.sh
scripts/: generate_cmake_sources.sh
source/: pch.h
source/Application/: Application.h  CMakeLists.txt
source/Application/AppDescriptor/: AppDescriptor.cpp  AppDescriptor.h
source/Application/CMake/: CMakeLists_sources.cmake
source/Application/GlfwApplication/: BaseGlfwApplication.cpp  BaseGlfwApplication.h  GlfwApplication.cpp  GlfwApplication.h
source/Application/scripts/: generate_cmake_sources.sh
source/Core/: CMakeLists.txt
source/Core/CMake/: CMakeLists_sources.cmake
source/Core/Config/: JSONConfig.cpp  JSONConfig.h  YAMLConfig.cpp  YAMLConfig.h
source/Core/Containers/: IntrusiveListNode.h
source/Core/Debugger/: moeDebugger.h
source/Core/Delegates/: Delegate.h  EventDelegateID.h  event.h
source/Core/Exception/: RuntimeException.h
source/Core/HashString/: HashString.h
source/Core/Log/: ILogger.h  moeLogMacros.h  moeLogger.h  moeLoggerBase.h
source/Core/Misc/: Literals.cpp  Literals.h  Types.h  moeAbort.h  moeCRTP.h  moeCountof.h  moeEnum.h  moeError.h  moeFile.h  moeNamedType.h  moeSystem.h
source/Core/Preprocessor/: moeAssert.h  moeBuilder.h  moeDebug.h  moeDiscard.h
source/Core/Resource/: BaseResource.h  FileResource.cpp  FileResource.h  ImageLoader.cpp  ImageLoader.h  MeshResource.h  Resource.h  ResourceFactory.h  ResourceManager.cpp  ResourceManager.h  ResourceManagerInterface.h  ResourceRef.cpp  ResourceRef.h  TextureResource.cpp  TextureResource.h
source/Core/_scripts/: generate_cmake_sources.sh
source/GameFramework/: CMakeLists.txt
source/GameFramework/CMake/: CMakeLists_sources.cmake
source/GameFramework/Engine/: Engine.cpp  Engine.h  Engine.inl  EnginePart.h
source/GameFramework/FSM/: FSM.h
source/GameFramework/ObjectPool/: ObjectPool.h
source/GameFramework/Service/: Service.h
source/GameFramework/Simulation/: Simulation.cpp  Simulation.h  Simulation.inl
source/GameFramework/_scripts/: generate_cmake_sources.sh
source/GameFramework/scripts/: generate_cmake_sources.sh
source/Graphics/: BufferDescription.h  CMakeLists.txt
source/Graphics/BlendState/: BlendEquation.h  BlendFactor.h  BlendStateDescriptor.cpp  BlendStateDescriptor.h
source/Graphics/CMake/: CMakeLists_sources.cmake
source/Graphics/Camera/: Camera.cpp  Camera.h  CameraHandle.h  CameraManager.cpp  CameraManager.h  CameraSystem.cpp  CameraSystem.h  ViewportDescriptor.h  ViewportHandle.h
source/Graphics/Color/: Color.cpp  Color.h
source/Graphics/CommandBuffer/: CommandBuffer.h
source/Graphics/Context/: GraphicsContext.h  GraphicsContextDescriptor.h
source/Graphics/DepthStencilState/: DepthStencilStateDescriptor.cpp  DepthStencilStateDescriptor.h
source/Graphics/Device/: GraphicsDevice.h
source/Graphics/DeviceBuffer/: BufferDescription.h  BufferUsage.cpp  BufferUsage.h  DeviceBuffer.cpp  DeviceBuffer.h  DeviceBufferHandle.h  IndexBufferHandle.h  UniformBufferHandle.h  VertexBufferHandle.h
source/Graphics/Drawable/: Drawable.cpp  Drawable.h
source/Graphics/Framebuffer/: Framebuffer.h  FramebufferAttachments.h  FramebufferDescription.h  FramebufferHandle.h
source/Graphics/Geometry/: Cube.cpp  Cube.h
source/Graphics/GraphicsDevice/: GraphicsDevice.h  OpenGLGraphicsDevice.cpp  OpenGLGraphicsDevice.h
source/Graphics/GraphicsSparseArray/: GraphicsSparseArray.h
source/Graphics/Handle/: DeviceHandles.h  ObjectHandle.h
source/Graphics/Light/: LightObject.cpp  LightObject.h  LightSystem.cpp  LightSystem.h
source/Graphics/Material/: Material.cpp  Material.h  MaterialBindings.h  MaterialBlock.h  MaterialDescriptor.h  MaterialFrameBlock.h  MaterialInstance.cpp  MaterialInstance.h  MaterialInterface.h  MaterialLibrary.cpp  MaterialLibrary.h  MaterialObjectBlock.h
source/Graphics/Mesh/: InstancedMesh.cpp  InstancedMesh.h  Mesh.cpp  Mesh.h  MeshDataDescriptor.h  MeshHandle.h
source/Graphics/Model/: Model.cpp  Model.h
source/Graphics/OpenGL/: Std140.h  moeOpenGL.h
source/Graphics/Pipeline/: PipelineDescriptor.h  PipelineHandle.h
source/Graphics/RHI/: RenderHardwareInterface.h
source/Graphics/RasterizerState/: RasterizerStateDescriptor.h
source/Graphics/RenderQueue/: RenderQueue.cpp  RenderQueue.h
source/Graphics/RenderTarget/: RenderTargetHandle.h
source/Graphics/RenderWorld/: GraphicsObject.cpp  GraphicsObject.h  GraphicsObjectData.h  RenderWorld.cpp  RenderWorld.h  RenderWorldHandle.h
source/Graphics/Renderer/: Renderer.h
source/Graphics/ResourceFactory/: ResourceFactory.h
source/Graphics/Sampler/: SamplerDescriptor.h  SamplerHandle.h
source/Graphics/SceneGraph/: SceneGraph.cpp  SceneGraph.h  SceneNode.cpp  SceneNode.h  SceneNodeHandle.h
source/Graphics/Swapchain/: Swapchain.h  (+1 more)
source/Input/: CMakeLists.txt  Input.h  InputHandler.h
source/Math/: CMakeLists.txt  Math.h  MathUsing.h  Matrix.h  Matrix4.h  Rect2D.h  Vec2.h  Vec3.h  Vec4.h
source/Window/: Window.h  WindowDescriptor.cpp  WindowDescriptor.h
(+445 files in other folders)
